--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aws-actions-amazon-ecs-deploy-task-definition",
+  "name": "aws-actions-amazon-ecs-run-task",
   "version": "1.3.5",
-  "description": "Registers an Amazon ECS task definition and deploys it to an ECS service.",
+  "description": "Registers an Amazon ECS task definition and run it as an ECS task.",
   "main": "index.js",
   "scripts": {
     "lint": "eslint **.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aws-actions/amazon-ecs-deploy-task-definition.git"
+    "url": "git+https://github.com/PretzelAux/amazon-ecs-run-task.git"
   },
   "keywords": [
     "AWS",
@@ -21,12 +21,12 @@
   "author": "AWS",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/aws-actions/amazon-ecs-deploy-task-definition/issues"
+    "url": "https://github.com/PretzelAux/amazon-ecs-run-task/issues"
   },
-  "homepage": "https://github.com/aws-actions/amazon-ecs-deploy-task-definition#readme",
+  "homepage": "https://github.com/PretzelAux/amazon-ecs-run-task#readme",
   "dependencies": {
     "@actions/core": "^1.2.6",
-    "aws-sdk": "^2.710.0",
+    "aws-sdk": "^2.908.0",
     "yaml": "^1.10.0"
   },
   "devDependencies": {
